--- a/src/styles/ArticleTemplate.css
+++ b/src/styles/ArticleTemplate.css
@@ -12,6 +12,7 @@
 }
 .Template h4 {
 	color: #00306e;
+	font-size: 1.35rem;
 }
 .Template p {
 	color: #666;
