--- a/src/styles/CaseStudy.css
+++ b/src/styles/CaseStudy.css
@@ -14,3 +14,7 @@
 	height: 25px;
 	margin: 25px;
 }
+#case-title hr {
+	margin-bottom: 0;
+	margin-top: 18px;
+}
