--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -8,6 +8,7 @@ b {
 	margin-top: 0;
 	color: #002960;
 	line-height: 1.5;
+	font-size: 1.5rem;
 }
 .service-description {
 	color: #666;
